# pico-neural-amp-modeler-demo

./: GETTING_STARTED.md  README.md  RESULTS.md
src/: main.c
tools/: CMakeLists.txt
